# bicat

./: Cargo.toml  LICENSE.md  README.md  justfile
src/: errors.rs  main.rs
src/display/: area.rs  cell_size.rs  fill_bg.rs  filling.rs  mod.rs
src/image/: mod.rs  source_image.rs  svg.rs  zune_compat.rs
src/kitty/: detect_support.rs  image_renderer.rs  mod.rs  terminal_esc.rs
